better dark mode, fixes #103

--- a/app/style/theme.scss
+++ b/app/style/theme.scss
@@ -1,4 +1,5 @@
 @use 'element-plus/theme-chalk/src/dark/css-vars.scss' as *;
+@import '@/style/variables';
 
 :root {
     --el-bg-secondary: rgb(243, 243, 243);
@@ -9,10 +10,16 @@
 
 html.dark {
     --el-bg-secondary: #1a1a1a;
+    --el-bg-color: rgba(20, 20, 20, 0.5);
     --el-menu-active-color: var(--wiki-accent-color);
     --box-shadow: 0 0 50px rgba(255, 255, 255, 0.03);
     --el-text-color: #e1e1e1;
     --wiki-accent-color: #6de3d5;
+    --el-border-color: rgb(46, 47, 53);
+
+    .el-dialog {
+        --el-dialog-bg-color: rgb(20, 20, 20);
+    }
 }
 
 @media screen and (min-width: 1000px) {
